--- a/atgu/atgu/templates/edit_resource.html
+++ b/atgu/atgu/templates/edit_resource.html
@@ -22,6 +22,7 @@
     </nav>
 
     <form id="resource-form" action="{{ base_path }}/resources/{{ resource['id'] }}/edit" method="post" enctype="multipart/form-data">
+      <input type="hidden" name="_csrf" value="{{ csrf_token }}">
       
       <div class="container">
 
